--- a/index.html
+++ b/index.html
@@ -4,6 +4,89 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>এগ্রি ১৭তম আবর্তন</title>
+<style>body {
+  font-family: 'SolaimanLipi', sans-serif;
+  background-color: #f5f5f5;
+  color: #333;
+  margin: 0;
+  padding: 20px;
+}
+
+h2, h3 {
+  color: seagreen;
+}
+
+ul {
+  padding-left: 20px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+table, th, td {
+  border: 1px solid #999;
+}
+
+th, td {
+  padding: 10px;
+  text-align: left;
+}
+
+th {
+  background-color: #e0f2f1;
+}
+
+.btn-group button {
+  margin-right: 5px;
+  padding: 5px 12px;
+  border: none;
+  background-color: #ddd;
+  cursor: pointer;
+  font-weight: bold;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.btn-group button:hover {
+  background-color: #b2dfdb;
+}
+
+.selected-yes {
+  background-color: lightgreen !important;
+  color: #1b5e20;
+  font-weight: bold;
+}
+
+.selected-no {
+  background-color: #f28b82 !important;
+  color: #7f0000;
+  font-weight: bold;
+}
+
+#resultBtn {
+  margin-top: 20px;
+  padding: 10px 20px;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 6px;
+  border: none;
+  background-color: seagreen;
+  color: white;
+  transition: background-color 0.3s ease;
+}
+
+#resultBtn:hover {
+  background-color: #2e7d32;
+}
+
+#finalResult {
+  margin-top: 20px;
+  font-weight: bold;
+  color: darkblue;
+}</style>
    <style>
     body {
       font-family: 'SolaimanLipi', Arial, sans-serif;
@@ -437,6 +520,7 @@
     </ul>
 
   <h2>🐛 শসা গাছের রোগ ও প্রতিকার</h2>
+  <ul> <iframe width="560" height="315" src="https://www.youtube.com/embed/RgOvvOadNFk?si=N3hbX3BilOMtKtCP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <table border="1" cellpadding="10" cellspacing="0" style="border-collapse: collapse; width: 100%; font-family: SolaimanLipi, sans-serif;">
   <thead style="background-color: #ffe0b2;">
     <tr>
@@ -570,113 +654,223 @@
     </tbody>
   </table>
 
-</section>
 <section id="bean">
-  <h2 style="color: mediumblue;">শিম (Bean)</h2>
-  <h3>কেন চাষ করবেন?</h3>
-  <p>1. 🌿 জনপ্রিয় ও পুষ্টিকর সবজি – আঁশ, ভিটামিন ও খনিজ উপাদানে ভরপুর</p>
-  <p>2. 💰 উচ্চ বাজারমূল্য – শীতকালে ও শহরে প্রচুর চাহিদা</p>
-  <p>3. 🌾 ডাল ফসল হওয়ায় মাটির উর্বরতা বৃদ্ধি করে</p>
-  <p>4. 🌱 সহজ পরিচর্যা – বাড়ির আঙিনা বা খোলা মাঠে মাচা বানিয়ে চাষ করা যায়</p>
-  <p>5. 🔄 বারবার ফল তোলা যায় – একটি গাছ থেকে বহুবার ফসল সংগ্রহ সম্ভব</p>
+    <h2>শিম (Bean)</h2>
 
-  <h3>🌦 উপযুক্ত জলবায়ু ও মাটি</h3>
-  <p>1. 🌡 আদর্শ তাপমাত্রা: ২০°C – ৩০°C</p>
-  <p>2. ☀ হালকা ঠান্ডা ও শুকনো আবহাওয়া ভালো</p>
-  <p>3. 🌱 দোআঁশ বা বেলে দোআঁশ মাটি</p>
-  <p>4. 🧪 মাটির pH: ৬.০ – ৭.৫</p>
-  <p>5. 💧 পানি নিষ্কাশনের ভালো ব্যবস্থা থাকা জরুরি</p>
+    <h3>কেন চাষ করবেন?</h3>
+    <ul>
+      <li>পুষ্টিগুণে ভরপুর সবজি</li>
+      <li>সব ঋতুতেই বিভিন্ন জাত রয়েছে</li>
+      <li>আয়বর্ধক ও বাজারে চাহিদাসম্পন্ন</li>
+      <li>উপকূলীয় অঞ্চলেও চাষ উপযোগী</li>
+    </ul>
 
-  <h3>🌿 লবণসহনশীল জাত</h3>
-  <p>1. BARI শিম-১, শিম-২ (সল্পমেয়াদি)</p>
-  <p>2. Salt-tolerant Hybrid Bean – উপকূলীয় এলাকায় উপযোগী</p>
+    <h3>🌍 উপযুক্ত পরিবেশ</h3>
+    <ul>
+      <li>জলবায়ু: মৃদু শীত থেকে উষ্ণ জলবায়ু</li>
+      <li>তাপমাত্রা: ২০-৩০ ডিগ্রি সেলসিয়াস</li>
+      <li>মাটি: দোআঁশ ও বেলে দোআঁশ, pH ৬-৭</li>
+    </ul>
 
-  <h3>📅 রোপণের সঠিক সময়</h3>
-  <p>➤ অক্টোবর – নভেম্বর (শীতকালীন)</p>
-  <p>➤ ফেব্রুয়ারি – মার্চ (গ্রীষ্মকালীন)</p>
+    <section id="bean-checklist">
+      <h2>🌱 শিম চাষের জমি ও পরিবেশ উপযোগী কিনা যাচাই করুন</h2>
+      <p style="color: #555;">নিচের প্রতিটি প্রশ্নে হ্যাঁ / না চাপুন:</p>
+      <ul style="list-style: none; padding: 0;" id="beanQuestionList">
+        <li>☀ <strong>সকাল-বিকেলে রোদ পড়ে?</strong><br />
+          <div class="btn-group">
+            <button onclick="setAnswer(0, 1, this)">✅ হ্যাঁ</button>
+            <button onclick="setAnswer(0, 0, this)">❌ না</button>
+          </div>
+        </li>
+        <li>🌡 <strong>তাপমাত্রা ২০-৩০°C এর মধ্যে?</strong><br />
+          <div class="btn-group">
+            <button onclick="setAnswer(1, 1, this)">✅ হ্যাঁ</button>
+            <button onclick="setAnswer(1, 0, this)">❌ না</button>
+          </div>
+        </li>
+        <li>🌧 <strong>জমিতে পানি জমে না?</strong><br />
+          <div class="btn-group">
+            <button onclick="setAnswer(2, 1, this)">✅ হ্যাঁ</button>
+            <button onclick="setAnswer(2, 0, this)">❌ না</button>
+          </div>
+        </li>
+        <li>🌱 <strong>মাটি দোআঁশ / বেলে দোআঁশ?</strong><br />
+          <div class="btn-group">
+            <button onclick="setAnswer(3, 1, this)">✅ হ্যাঁ</button>
+            <button onclick="setAnswer(3, 0, this)">❌ না</button>
+          </div>
+        </li>
+        <li>💧 <strong>সেচ ব্যবস্থা আছে?</strong><br />
+          <div class="btn-group">
+            <button onclick="setAnswer(4, 1, this)">✅ হ্যাঁ</button>
+            <button onclick="setAnswer(4, 0, this)">❌ না</button>
+          </div>
+        </li>
+      </ul>
+      <button id="resultBtn">📊 ফলাফল দেখুন</button>
+      <div id="finalResult"></div>
+    </section>
 
-  <h3>📌 রোপণের আগের প্রস্তুতি</h3>
-  <p>1. জমি গভীরভাবে চাষ করে শুকনো করে নিন</p>
-  <p>2. গর্ত তৈরি করুন: ৪৫cm × ৪৫cm × ৪৫cm</p>
-  <p>3. প্রতি গর্তে: জৈব সার, ছাই, চুন মিশিয়ে রেখে দিন</p>
-  <p>4. প্রতি গর্তে ২–৩টি বীজ বপন করুন</p>
-  <p>5. গাছ থেকে গাছ দূরত্ব: ৫০–৭৫ সেমি | সারি থেকে সারি: ৭৫–৯০ সেমি</p>
+    <h3>📅 চাষের সময় ও এলাকা</h3>
+    <table>
+      <thead>
+        <tr>
+          <th>মৌসুম</th>
+          <th>বপনের সময়</th>
+          <th>ফসল সংগ্রহ</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>রবি মৌসুম</td>
+          <td>অক্টোবর-নভেম্বর</td>
+          <td>ডিসেম্বর-ফেব্রুয়ারি</td>
+        </tr>
+        <tr>
+          <td>খরিফ মৌসুম</td>
+          <td>ফেব্রুয়ারি-মার্চ</td>
+          <td>এপ্রিল-জুন</td>
+        </tr>
+      </tbody>
+    </table>
 
-  <h3>🌾 বীজ হার</h3>
-  <p>প্রতি হেক্টরে ২৫–৩০ কেজি বীজ প্রয়োজন</p>
+    <h3>📍 উপযুক্ত এলাকা:</h3>
+    <ul>
+      <li>নোয়াখালী, ভোলা, বরিশাল – খরিফে লবণসহনশীল জাত</li>
+      <li>ঢাকা, কুমিল্লা – রবি মৌসুমে বাণিজ্যিক উৎপাদন</li>
+      <li>চুয়াডাঙ্গা, যশোর – মাঝারি উর্বর জমিতে ভাল ফলন</li>
+    </ul>
 
-  <h3>🌿 সার ব্যবস্থাপনা</h3>
-  <p>✅ জৈব সার – ৮–১০ টন/হেক্টর</p>
-  <p>✅ ইউরিয়া – ৮০–১০০ কেজি</p>
-  <p>✅ টিএসপি – ১০০ কেজি</p>
-  <p>✅ এমওপি – ৭০–৮০ কেজি</p>
-  <p>➤ ইউরিয়া দুই কিস্তিতে প্রয়োগ (২০ ও ৪০ দিন পর)</p>
+    <h3>🧪 সার ব্যবস্থাপনা (হেক্টরপ্রতি)</h3>
+    <table>
+      <thead>
+        <tr>
+          <th>পর্যায়</th>
+          <th>সারের নাম</th>
+          <th>পরিমাণ</th>
+          <th>প্রয়োগ পদ্ধতি</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>জমি তৈরি</td>
+          <td>গোবর/কম্পোস্ট</td>
+          <td>৮-১০ টন</td>
+          <td>মাটির সাথে মিশিয়ে</td>
+        </tr>
+        <tr>
+          <td>বপনের সময়</td>
+          <td>টিএসপি</td>
+          <td>১২০ কেজি</td>
+          <td>গর্তে প্রয়োগ</td>
+        </tr>
+        <tr>
+          <td>বপনের সময়</td>
+          <td>পটাশ</td>
+          <td>৬০ কেজি</td>
+          <td>শিকড়ের পাশে</td>
+        </tr>
+        <tr>
+          <td>গাছ ১৫-২০ দিন বয়সে</td>
+          <td>ইউরিয়া</td>
+          <td>৫০ কেজি</td>
+          <td>পাটির পাশে ছিটিয়ে</td>
+        </tr>
+      </tbody>
+    </table>
 
-  <h3>💧 সেচ ব্যবস্থাপনা</h3>
-  <p>1. প্রথম ১ মাসে প্রতি ৭–১০ দিনে সেচ দিন</p>
-  <p>2. ফুল ও ফল ধরার সময় বেশি আর্দ্রতা দরকার</p>
-  <p>3. অতিরিক্ত পানি জমতে দেওয়া যাবে না</p>
+    <h3>💧 সেচ</h3>
+    <ul>
+      <li>প্রথম সেচ বপনের ১০ দিন পর</li>
+      <li>এরপর প্রতি ৭-১০ দিন অন্তর সেচ দিন</li>
+      <li>ফুল ও ফল আসার সময় বেশি পানি প্রয়োজন</li>
+    </ul>
 
-  <h2>🌿 শিম গাছের রোগ ও প্রতিকার</h2>
-  <table border="1" cellpadding="10" cellspacing="0" style="border-collapse: collapse; width: 100%; font-family: SolaimanLipi, sans-serif;">
-    <thead style="background-color: #c5cae9;">
-      <tr>
-        <th>রোগের নাম</th>
-        <th>লক্ষণ</th>
-        <th>কারণ</th>
-        <th>প্রতিকার</th>
-        <th>ঔষধ ও মাত্রা</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>পাতা ঝলসানো (Leaf Blight)</td>
-        <td>পাতা বাদামি হয়ে শুকিয়ে যায়</td>
-        <td>ছত্রাক</td>
-        <td>আক্রান্ত পাতা তুলে ফেলা</td>
-        <td>Dithane M-45 – ২ গ্রাম/লিটার</td>
-      </tr>
-      <tr>
-        <td>বিন পড বোরার (Pod Borer)</td>
-        <td>শিমে গর্ত, দানা খেয়ে ফেলে</td>
-        <td>পোকার আক্রমণ</td>
-        <td>আক্রান্ত ফল তুলে ধ্বংস করুন</td>
-        <td>Cypermethrin – ১ মিলি/লিটার</td>
-      </tr>
-      <tr>
-        <td>মাকড়সা ও ছারপোকা</td>
-        <td>পাতা কুঁকড়ে যায়, হলদেটে হয়</td>
-        <td>পোকামাকড়</td>
-        <td>জৈব বা রাসায়নিক স্প্রে</td>
-        <td>Malathion – ২ মিলি/লিটার</td>
-      </tr>
-    </tbody>
-  </table>
+    <h3>🌿 আগাছা নিয়ন্ত্রণ</h3>
+    <ul>
+      <li>প্রথম ২০ দিনের মধ্যে নিড়ানি দিন</li>
+      <li>আবশ্যক হলে মালচিং ব্যবহার করুন</li>
+    </ul>
 
-  <h2>🌿 শিম সংগ্রহ ও পরিচর্যা</h2>
-  <table border="1" cellpadding="10" cellspacing="0" style="border-collapse: collapse; width: 100%; font-family: SolaimanLipi, sans-serif;">
-    <thead style="background-color: #fff9c4;">
-      <tr>
-        <th>বিষয়</th>
-        <th>বর্ণনা</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>📆 সংগ্রহের সময়</td>
-        <td>বপনের ৫০–৬০ দিন পর থেকে প্রতি ৩–৪ দিন পরপর সংগ্রহ</td>
-      </tr>
-      <tr>
-        <td>✂ সংগ্রহ পদ্ধতি</td>
-        <td>হাতে বা ধারালো ব্লেড দিয়ে কেটে সংগ্রহ করুন</td>
-      </tr>
-      <tr>
-        <td>📦 সংরক্ষণ</td>
-        <td>শুকনো ও ঠান্ডা স্থানে রাখতে হবে | ৫–৭ দিন ফ্রিজে সংরক্ষণযোগ্য</td>
-      </tr>
-    </tbody>
-  </table>
-</section>
+    <h3>🐛 রোগ ও প্রতিকার</h3>
+    <table>
+      <thead>
+        <tr>
+          <th>রোগ</th>
+          <th>লক্ষণ</th>
+          <th>প্রতিকার</th>
+          <th>ঔষধ ও মাত্রা</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>পাতা মোড়ানো ভাইরাস</td>
+          <td>পাতা কুঁচকে যায়</td>
+          <td>আক্রান্ত গাছ তুলে ফেলুন</td>
+          <td>Imidacloprid – ১ মি.লি./লিটার</td>
+        </tr>
+        <tr>
+          <td>পাউডারি মিলডিউ</td>
+          <td>পাতায় সাদা স্তর</td>
+          <td>পাতা অপসারণ, ছত্রাকনাশক</td>
+          <td>Score – ১ মি.লি./লিটার</td>
+        </tr>
+        <tr>
+          <td>লাল মাকড়</td>
+          <td>পাতা বাদামী হয়ে শুকায়</td>
+          <td>জৈব স্প্রে ব্যবহার করুন</td>
+          <td>Oberon – ০.৫ মি.লি./লিটার</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <h2>🥬 ফল সংগ্রহ ও ব্যবহার</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>পর্যায়</th>
+          <th>কী করবেন</th>
+          <th>উদ্দেশ্য</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>ফল পরিপক্ব</td>
+          <td>গোড়া নরম হওয়ার আগেই সংগ্রহ</td>
+          <td>বাজারমূল্য ভালো</td>
+        </tr>
+        <tr>
+          <td>প্রতিদিন/১ দিন পরপর</td>
+          <td>হাত বা ছুরি দিয়ে</td>
+          <td>নতুন ফুল ও ফলন উৎসাহিত হয়</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <h3>🌿 অন্যান্য অংশের ব্যবহার</h3>
+    <table>
+      <thead>
+        <tr>
+          <th>গাছের অংশ</th>
+          <th>ব্যবহার</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>লতা ও পাতা</td>
+          <td>জৈব সার, পশুখাদ্য</td>
+        </tr>
+        <tr>
+          <td>পুরো গাছ</td>
+          <td>মাটিতে মিশিয়ে ফেলা যায়</td>
+        </tr>
+        <tr>
+          <td>পচা শিম</td>
+          <td>কম্পোস্টে ব্যবহার</td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
 
 <section id="pointedgourd">
   <h2 style="color: seagreen;">পটল (Pointed Gourd)</h2>
@@ -1743,6 +1937,43 @@
       resultText = "➖ শর্ত কিছুটা মিলেছে, শসা চাষ করা গেলেও কিছু ঝুঁকি থাকতে পারে।";
     } else {
       resultText = "❌ আপনার জমি শসা চাষের জন্য উপযুক্ত নয়।";
+    }
+
+    document.getElementById("finalResult").innerText = resultText;
+  }
+</script>
+<script>
+  let answers = [null, null, null, null, null, null];
+
+  function setAnswer(index, value, clickedBtn) {
+    answers[index] = value;
+
+    const btnGroup = clickedBtn.parentNode.querySelectorAll("button");
+  btnGroup.forEach(btn => btn.classList.remove("selected-yes", "selected-no"));
+
+     if (value === 1) {
+    clickedBtn.classList.add("selected-yes");
+  } else {
+    clickedBtn.classList.add("selected-no");
+  }
+}
+
+ function showFinalResult() {
+  if (answers.includes(null)) {
+    document.getElementById("finalResult").innerText = "⚠ অনুগ্রহ করে সব প্রশ্নের উত্তর দিন।";
+    return;
+  }
+
+  let total = answers.reduce((a, b) => a + b, 0);
+  let resultText = "";
+
+
+   if (total >= 5) {
+      resultText = "✅ আপনার জমি শিম চাষের জন্য খুবই উপযুক্ত!";
+    } else if (total >= 3) {
+      resultText = "➖ শর্ত কিছুটা মিলেছে, শিম চাষ করা গেলেও কিছু ঝুঁকি থাকতে পারে।";
+    } else {
+      resultText = "❌ আপনার জমি শিম চাষের জন্য উপযুক্ত নয়।";
     }
 
     document.getElementById("finalResult").innerText = resultText;
